--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ ver 4.1.2
 * 新增: K.remove(expr)函数，可移除多个编辑器，expr为选择器或DOM对象。
 * 新增: K.sync(expr)函数，可同步多个编辑器，expr为选择器或DOM对象。
 * 新增: K.create(expr)、K(expr)等函数可以直接传入jQuery对象。
+* 新增: filePostName初始化参数，可指定上传文件form名称。
 * 新增: fillDescAfterUploadImage初始化参数，true时图片上传成功后切换到图片编辑标签。
 * 新增: afterSelectFile初始化参数，从图片空间选择后执行的回调函数。
 * 新增: K.NodeClass,K.RangeClass,K.CmdClass,K.EditClass,K.MenuClass等接口。
