--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,7 @@ ver 4.1.2
 * 新增: afterSelectFile初始化参数，从图片空间选择后执行的回调函数。
 * 新增: K.NodeClass,K.RangeClass,K.CmdClass,K.EditClass,K.MenuClass等接口。
 * 新增: plugin.imageDialog(options)添加showLocal和showRemote参数，值为false时分别隐藏网络图片和本地上传。
+* 新增: afterUpload新增data和name参数，分别为后端返回的JSON数据和插件名称。
 * 变更: fullscreenShortcut默认值改成false，默认不启用ESC快捷键全屏。
 * 改善: 多图上传时，允许用户post自定义参数到服务器。
 * Bugfix: [Firefox] 居中后输入几个文字回车换行，内容被全选。
