--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@
 #
 #######################################################################
 
-ver 4.1.2
+ver 4.1.2 (2012-07-21)
 * 新增: K.remove(expr)函数，可移除多个编辑器，expr为选择器或DOM对象。
 * 新增: K.sync(expr)函数，可同步多个编辑器，expr为选择器或DOM对象。
 * 新增: K.create(expr)、K(expr)等函数可以直接传入jQuery对象。
