--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
 #
 #######################################################################
 
+ver 4.1.3
+* Bugfix: [IE] 只显示本地上传Tab时，打开图片弹出框报错。
+
 ver 4.1.2 (2012-07-21)
 * 新增: K.remove(expr)函数，可移除多个编辑器，expr为选择器或DOM对象。
 * 新增: K.sync(expr)函数，可同步多个编辑器，expr为选择器或DOM对象。
