--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 
 ver 4.1.3
+* 改善: 重复执行K.create时只创建一次。
 * Bugfix: [IE] 只显示本地上传Tab时，打开图片弹出框报错。
 * Bugfix: 点击全屏后再切换回来，有时候出现JS错误。
 * Bugfix: K.addUnit(val, unit)第二个参数不起作用。
