--- a/changelog.txt
+++ b/changelog.txt
@@ -11,7 +11,8 @@ ver 4.1.3
 * Bugfix: K.addUnit(val, unit)第二个参数不起作用。
 * Bugfix: &会转义成&amp;这样超链接就不能访问。
 * Bugfix: 表情预览失效。
-* Bugfix: [IE9]多文件上传时不显示上传按钮。
+* Bugfix: [IE9] 多文件上传时不显示上传按钮。
+* Bugfix: [Chrome] 创建弹出框时，Console提示没有访问权限。
 
 ver 4.1.2 (2012-07-21)
 * 新增: K.remove(expr)函数，可移除多个编辑器，expr为选择器或DOM对象。
