--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 
 ver 4.1.3
+* 新增: 百度地图可选择iframe动态地图。
 * 新增: pagebreakHtml初始化参数，可指定分页符HTML。
 * 改善: 重复执行K.create时只创建一次。
 * Bugfix: [IE] 只显示本地上传Tab时，打开图片弹出框报错。
