--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
 #
 #######################################################################
 
+ver 4.1.4
+* Bugfix: 服务器没有配置默认index.html时，百度动态地图无法加载。
+
 ver 4.1.3 (2012-10-14)
 * 新增: 百度地图可插入iframe动态地图。
 * 新增: pagebreakHtml初始化参数，可指定分页符HTML。
