--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 
 ver 4.1.4
+* 改善: 弹出框能够跟随滚动条滚动居中显示。
 * Bugfix: 服务器没有配置默认index.html时，百度动态地图无法加载。
 
 ver 4.1.3 (2012-10-14)
