--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,7 @@ ver 4.1.4
 * Bugfix: 当页面里面有jQuery的uploadify插件时，无法连续上传。
 * Bugfix: [WEBKIT] 有些输入法，稍微快速地连续输入时，光标位置错乱。
 * Bugfix: URL包含中文时，就会变成乱码。
+* Bugfix: [Firefox] 编辑链接后回车换行，在新的段落输入内容带上面那个链接。
 
 ver 4.1.3 (2012-10-14)
 * 新增: 百度地图可插入iframe动态地图。
