--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 
 ver 4.1.4
+* 新增: 自动调整高度插件。
 * 改善: 弹出框能够跟随滚动条滚动居中显示。
 * Bugfix: 服务器没有配置默认index.html时，百度动态地图无法加载。
 * Bugfix: 点击图片属性、超级链接属性时，冒号变成%3A。
