--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,7 @@ ver 4.1.4
 * Bugfix: URL包含中文时，就会变成乱码。
 * Bugfix: [Firefox] 编辑链接后回车换行，在新的段落输入内容带上面那个链接。
 * Bugfix: 繁体语言包缺少uploadSuccess属性。
+* Bugfix: [Firefox] 编辑3.x版本生成的文章时，可能会出现多余的空行。
 
 ver 4.1.3 (2012-10-14)
 * 新增: 百度地图可插入iframe动态地图。
