--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
 #
 #######################################################################
 
+ver 4.1.5
+* Bugfix: 复制粘贴3.x版本生成的文章时，可能会出现多余的空行。
+
 ver 4.1.4 (2012-11-11)
 * 改善: 弹出框能够跟随滚动条滚动居中显示。
 * Bugfix: 服务器没有配置默认index.html时，百度动态地图无法加载。
