--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ ver 4.1.5
 * Bugfix: 复制粘贴3.x版本生成的文章时，可能会出现多余的空行。
 * Bugfix: 非IE浏览器插入图片或粘贴文本后，可视范围没有自动滚动到光标当前显示的位置。
 * Bugfix: [IE] 工具栏被图片选中标记覆盖时不能操作。
+* Bugfix: [Firefox] 每次按回车都会显示TypeError。
 
 ver 4.1.4 (2012-11-11)
 * 改善: 弹出框能够跟随滚动条滚动居中显示。
