--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,7 @@ ver 4.1.5
 * Bugfix: 非IE浏览器插入图片或粘贴文本后，可视范围没有自动滚动到光标当前显示的位置。
 * Bugfix: [IE] 工具栏被图片选中标记覆盖时不能操作。
 * Bugfix: [Firefox] 每次按回车都会显示TypeError。
+* Bugfix: [Chrome] 纯文本粘贴1个空行会变成没有空行或者2个空行。
 
 ver 4.1.4 (2012-11-11)
 * 改善: 弹出框能够跟随滚动条滚动居中显示。
