--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,7 @@ ver 4.1.5
 * Bugfix: [Firefox] 每次按回车都会显示TypeError。
 * Bugfix: [Chrome] 纯文本粘贴1个空行会变成没有空行或者2个空行。
 * Bugfix: [IE9] input标签会丢失checked属性。
+* Bugfix: [IE8-] 未能隐藏display为none的input/select/button。
 
 ver 4.1.4 (2012-11-11)
 * 改善: 弹出框能够跟随滚动条滚动居中显示。
