--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
 #
 #######################################################################
 
+ver 4.1.6
+* Bugfix: [IE9] 在frame里调用编辑器，关闭批量上传dialog时浏览器会崩溃。
+
 ver 4.1.5 (2013-01-20)
 * 新增: zIndex初始化参数，可指定弹出层的z-index。
 * Bugfix: 复制粘贴3.x版本生成的文章时，可能会出现多余的空行。
