--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 
 ver 4.1.6
 * Bugfix: [IE9] 在frame里调用编辑器，关闭批量上传dialog时浏览器会崩溃。
+* Bugfix: 插入图片后输入文字，文字加粗后取消加粗，图片会被删除。
 
 ver 4.1.5 (2013-01-20)
 * 新增: zIndex初始化参数，可指定弹出层的z-index。
