--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,7 @@ ver 4.1.6
 * Bugfix: 插入图片后输入文字，文字加粗后取消加粗，图片会被删除。
 * Bugfix: [IE] 工具栏被图片选中标记覆盖时有时候无法操作，比如居中对齐后再左对齐。
 * Bugfix: 全屏ESC快捷键默认未开启，但图标提示还包含ESC。
+* Bugfix: 图片上传后的url包含&时会被转换成&amp;。
 
 ver 4.1.5 (2013-01-20)
 * 新增: zIndex初始化参数，可指定弹出层的z-index。
