Update version to 4.1.6

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@
 #
 #######################################################################
 
-ver 4.1.6
+ver 4.1.6 (2013-03-24)
 * 新增: 韩国语语言包，感谢Github用户composite贡献。
 * 新增: allowImageRemote初始化参数，可隐藏网络图片标签。
 * 改善: 插入程序代码添加是否为空的判断。
