Fix bug: quit fullscreen mode, editor cannot restore width and height.

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
 #
 #######################################################################
 
+ver 4.1.7
+* Bugfix: 取消全屏后没有恢复到原来大小，调整窗口大小后宽高变成全屏宽高。
+
 ver 4.1.6 (2013-03-24)
 * 新增: 韩国语语言包，感谢Github用户composite贡献。
 * 新增: allowImageRemote初始化参数，可隐藏网络图片标签。
