--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,7 @@
 #######################################################################
 
 ver 4.1.7
-* Bugfix: 取消全屏后没有恢复到原来大小，调整口大小后宽高变成全屏宽高。
+* Bugfix: 取消全屏后没有恢复到原来大小，调整窗口大小后宽高变成全屏宽高。
 * Bugfix: [IE] 删除图片、Flash、视频后立即点击图片按钮出错。
 * Bugfix: [IE8] 源代码模式下输入<input type="text" />会丢失type属性。
 * Bugfix: [IE] 输入几个文字，切换到源代码模式再切换回来，插入图片报错。
