Fix issue #99: embed size cannot set percent

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 4.2
+* Bugfix: embed宽高无法用百分比设置。
 
 ver 4.1.7 (2013-04-21)
 * Bugfix: 取消全屏后没有恢复到原来大小，调整窗口大小后宽高变成全屏宽高。
