Improve ready function

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 #
 #######################################################################
 ver 4.2
+* 改善: 页面加载完成后也可以触发KindEditor.ready。
 * Bugfix: embed宽高无法用百分比设置。
 * Bugfix: [Firefox] 输入几个文字，切换到源代码模式再切换回来，插入图片报错。
 
