--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 ver 4.1.8
 * 新增: kindeditor-all.js包含自动高度插件。
+* 新增: K.html(expr, val)，K.appendHtml(expr, val)，K.insertHtml(expr, val)接口。
 * 改善: 页面加载完成后也可以触发KindEditor.ready。
 * Bugfix: embed宽高无法用百分比设置。
 * Bugfix: [Firefox] 输入几个文字，切换到源代码模式再切换回来，插入图片报错。
