--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,7 @@ ver 4.1.8
 * Bugfix: 自动高度插件高度只增不减，感谢Github用户wyqbailey贡献。
 * Bugfix: editor.html(val)的val参数为null或undefined时报错。
 * Bugfix: [IE10] 单独调用组件-上传图片弹出框，需要点击两次选择图片按钮才能弹出窗体。
+* Bugfix: 代码模式下输入带连续多个空格的标签，有些浏览器无响应。
 
 ver 4.1.7 (2013-04-21)
 * Bugfix: 取消全屏后没有恢复到原来大小，调整窗口大小后宽高变成全屏宽高。
