--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ ver 4.1.8
 * 新增: K.html(expr, val)，K.appendHtml(expr, val)，K.insertHtml(expr, val)接口。
 * 改善: 页面加载完成后也可以触发KindEditor.ready。
 * 改善: getAttributeNode已不赞成使用，用getAttribute替代。
+* Bugfix: 有些浏览器上点击边缘，可能无法弹出文件选择框。
 * Bugfix: embed宽高无法用百分比设置。
 * Bugfix: [Firefox] 输入几个文字，切换到源代码模式再切换回来，插入图片报错。
 * Bugfix: 自动高度插件高度只增不减，感谢Github用户wyqbailey贡献。
