Fix issue #102: pagebreak bug

--- a/changelog.txt
+++ b/changelog.txt
@@ -17,6 +17,7 @@ ver 4.1.8
 * Bugfix: 代码模式下输入带连续多个空格的标签，有些浏览器无响应。
 * Bugfix: [IE] 当两个A标签并排在一起中间没有别的内容，修改后面的链接地址时，前面的链接地址也被改掉。
 * Bugfix: 页面同时引入SWFUpload，多图上传会失败。
+* Bugfix: 插入分页符，有时候出现复制HTML代码的现象。
 
 ver 4.1.7 (2013-04-21)
 * Bugfix: 取消全屏后没有恢复到原来大小，调整窗口大小后宽高变成全屏宽高。
