--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ ver 4.1.8
 * Bugfix: [IE] 当两个A标签并排在一起中间没有别的内容，修改后面的链接地址时，前面的链接地址也被改掉。
 * Bugfix: 页面同时引入SWFUpload，多图上传会失败。
 * Bugfix: 插入分页符，有时候出现复制HTML代码的现象。
+* Bugfix: 编辑图片后丢失class、id等属性。
 
 ver 4.1.7 (2013-04-21)
 * Bugfix: 取消全屏后没有恢复到原来大小，调整窗口大小后宽高变成全屏宽高。
