--- a/changelog.txt
+++ b/changelog.txt
@@ -24,6 +24,7 @@ ver 4.1.8
 * Bugfix: 全屏后和还原后光标没有选中之前光标的位置。
 * Bugfix: 特定环境下有时候出现两个弹出框。
 * Bugfix: [IE] 编辑表格后焦点跳到顶部。
+* Bugfix: [IE] 先选中图片后居中，再左对齐，光标跳到顶部。
 
 ver 4.1.7 (2013-04-21)
 * Bugfix: 取消全屏后没有恢复到原来大小，调整窗口大小后宽高变成全屏宽高。
