--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 4.1.8
+ver 4.1.8 (2013-10-06)
 * 新增: kindeditor-all.js包含自动高度插件。
 * 新增: K.html(expr, val)，K.appendHtml(expr, val)，K.insertHtml(expr, val)接口。
 * 改善: IE9+都使用W3C Range。
