Fix bug where autoheight plugin

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,8 +4,9 @@
 #
 #######################################################################
 
-ver 4.1.9
+ver 4.1.9 (2013-10-08)
 * Bugfix: 选中后无法添加超级链接。
+* Bugfix: 自动高度插件无法在多个编辑器上使用。
 
 ver 4.1.8 (2013-10-06)
 * 新增: kindeditor-all.js包含自动高度插件。
