Fix bug where uploadbutton

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
 #
 #######################################################################
 
+ver 4.1.10
+* Bugfix: [IE6-7] 上传按钮界面错乱。
+
 ver 4.1.9 (2013-10-08)
 * Bugfix: 选中后无法添加超级链接。
 * Bugfix: 自动高度插件无法在多个编辑器上使用。
