Fix issue #140: supports IE11

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 
 ver 4.1.10
+* Bugfix: 兼容IE11。
 * Bugfix: [IE6-7] 上传按钮界面错乱。
 * Bugfix: 引入kindeditor-all.js后开启自动高度插件会报错。
 * Bugfix: &reg;来回切换代码模式后变成(R)。
