--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@
 #
 #######################################################################
 
-ver 4.1.10
+ver 4.1.10 (2013-11-23)
 * Bugfix: 兼容IE11。
 * Bugfix: [IE6-7] 上传按钮界面错乱。
 * Bugfix: 引入kindeditor-all.js后开启自动高度插件会报错。
