--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
 #
 #######################################################################
 
+ver 4.2
+* Bugfix: [IE6] 当前页面设置了document.domain，销毁编辑器会报错。
+
 ver 4.1.10 (2013-11-23)
 * Bugfix: 兼容IE11。
 * Bugfix: [IE6-7] 上传按钮界面错乱。
