--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 
 ver 4.2
 * 新增: 俄语语言包，感谢Valery Votintsev (http://codersclub.org/)。
+* 改善: 语言包文件名标准化，zh_CN -> zh-CN, zh_TW -> zh-TW。
 * Bugfix: [IE6] 当前页面设置了document.domain，销毁编辑器会报错。
 * Bugfix: 行首全角空格被过滤。
 * Bugfix: 修复多语言包的一些小错误。
