--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,11 @@
 #
 #######################################################################
 
+ver 4.1.12
+* Bugfix：使用 use strict 时 JS 报错。
+* Bugfix：自动高度的时候，全屏模式下还是执行自动高度。
+* Bugfix：字体包含空格时切换代码模式，字体变成 &quot;。
+
 ver 4.1.11 (2016-03-31)
 * 新增: 俄语语言包，感谢Valery Votintsev (http://codersclub.org/)。
 * 改善: 语言包文件名标准化，zh_CN -> zh-CN, zh_TW -> zh-TW。
