changing upload filename to txt

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
 #
 #######################################################################
 
+ver 4.1.13
+* 改善：修改服务端代码的后缀名，避免直接上传到服务器后出现安全漏洞。
+
 ver 4.1.12
 * Bugfix：使用 use strict 时 JS 报错。
 * Bugfix：自动高度的时候，全屏模式下还是执行自动高度。
