--- a/changelog.txt
+++ b/changelog.txt
@@ -4,13 +4,12 @@
 #
 #######################################################################
 
-ver 4.1.13
-* 改善：修改服务端代码的后缀名，避免直接上传到服务器后出现安全漏洞。
-
-ver 4.1.12
+ver 4.1.12 (2019-03-07)
 * Bugfix：使用 use strict 时 JS 报错。
 * Bugfix：自动高度的时候，全屏模式下还是执行自动高度。
 * Bugfix：字体包含空格时切换代码模式，字体变成 &quot;。
+* Bugfix：[Chrome] 在 Chrome 上添加标题之后换行 JS 报错。
+* 改善：修改服务端代码的后缀名，避免直接上传到服务器后出现安全漏洞。
 
 ver 4.1.11 (2016-03-31)
 * 新增: 俄语语言包，感谢Valery Votintsev (http://codersclub.org/)。
